fix: z-index regression, fullscreen top padding

--- a/inject.css
+++ b/inject.css
@@ -10,6 +10,11 @@
   white-space: normal;
 }
 
+/* Use minimal z-index for non-YouTube sites to avoid overlapping modals */
+.vsc-controller.vsc-non-youtube {
+  z-index: 1 !important;
+}
+
 .vsc-nosource {
   display: none !important;
 }
